# helix

./: Cargo.toml
book/src/: editor.md
helix-core/: Cargo.toml
helix-core/src/: selection.rs
helix-loader/: Cargo.toml
helix-loader/src/: lib.rs
helix-term/src/: application.rs  args.rs  commands.rs  handlers.rs  main.rs
helix-term/src/commands/: typed.rs
helix-term/src/handlers/: prompt.rs
helix-term/src/ui/: prompt.rs  statusline.rs
helix-term/tests/: integration.rs
helix-term/tests/test/: helpers.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  lib.rs  view.rs
runtime/queries/asciidoc/: highlights.scm  injections.scm
