[package]
name = "helix-core"
description = "Helix editor core editing primitives"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
unicode-lines = ["ropey/unicode_lines"]
integration = []

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-loader = { path = "../helix-loader" }
helix-parsec = { path = "../helix-parsec" }

ropey.workspace = true
unicode-segmentation.workspace = true
slotmap.workspace = true
tree-house.workspace = true
regex.workspace = true
bitflags.workspace = true
foldhash.workspace = true
toml.workspace = true

nucleo.workspace = true
parking_lot.workspace = true
globset.workspace = true
smallvec = { version = "1.15", features = ["serde"] }
smartstring = "1.0.1"
# unicode-width is changing width definitions
# that both break our logic and disagree with common
# width definitions in terminals, we need to replace it.
# For now lets lock the version to avoid rendering glitches
# when installing without `--locked`
unicode-width = "=0.1.14"
unicode-general-category = "1.1"
once_cell = "1.21"
arc-swap = "1"
ahash = "0.8.11"
hashbrown = { version = "0.14.5", features = ["raw"] }
dunce = "1.0"
url = "2.5.4"

log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

imara-diff =  "0.2.0"
encoding_rs = "0.8"

chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }

textwrap = "0.16.2"
regex-cursor = "0.1.5"

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
indoc = "2.0.6"
